[backups2datalad] 14 files added

--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -15,30 +15,30 @@ assetsSummary:
     name: Neurodata Without Borders (NWB)
     schemaKey: StandardsType
   measurementTechnique:
-  - name: surgical technique
-    schemaKey: MeasurementTechniqueType
   - name: multi electrode extracellular electrophysiology recording technique
     schemaKey: MeasurementTechniqueType
-  - name: analytical technique
+  - name: surgical technique
     schemaKey: MeasurementTechniqueType
   - name: signal filtering technique
     schemaKey: MeasurementTechniqueType
-  numberOfBytes: 40104361888
-  numberOfFiles: 15
-  numberOfSubjects: 2
+  - name: analytical technique
+    schemaKey: MeasurementTechniqueType
+  numberOfBytes: 64199969632
+  numberOfFiles: 29
+  numberOfSubjects: 4
   schemaKey: AssetsSummary
   species:
   - identifier: http://purl.obolibrary.org/obo/NCBITaxon_10116
     name: Rattus norvegicus - Norway rat
     schemaKey: SpeciesType
   variableMeasured:
+  - ElectrodeGroup
   - LFP
   - ElectricalSeries
   - ProcessingModule
-  - ElectrodeGroup
 citation: Ramachandran, Sandhya; He, Bin; Yu, Kai; Gao, Huan (2023) Electrophysiological
   Recordings in Anesthetized Rats in the Primary Somatosensory Cortex with Phased
-  Ultrasound Array Stimulation (Version draft) [Data set]. DANDI archive. https://dandiarchive.org/dandiset/000463/draft
+  Ultrasound Array Stimulation (Version draft) [Data set]. DANDI archive. https://doi.org/10.80507/dandi.123456/0.123456.1234
 contributor:
 - affiliation: []
   email: s.ramachandran8@gmail.com
@@ -84,11 +84,13 @@ contributor:
   - dcite:Affiliation
   schemaKey: Organization
 dateCreated: '2023-03-23T01:45:58.892864+00:00'
+datePublished: '2023-05-02T21:23:09.404959+00:00'
 description: 'In these recordings, we test different intensities and PRFs (pulse repetition
   frequencies) of ultrasound stimulation using a phased ultrasound array to stimulate
   the somatosensory cortex of rats anesthetized with 2% isoflurane through inhalation.
   Recordings are taken using 32 channel Neuronexus electrodes. Ultrasound stimulation
   is delivered every 2.5 seconds, and each recording has either 200 or 500 trials. '
+doi: 10.80507/dandi.123456/0.123456.1234
 ethicsApproval: []
 id: DANDI:000463/draft
 identifier: DANDI:000463
@@ -100,6 +102,18 @@ manifestLocation:
 name: Electrophysiological Recordings in Anesthetized Rats in the Primary Somatosensory
   Cortex with Phased Ultrasound Array Stimulation
 protocol: []
+publishedBy:
+  endDate: '2023-05-02T21:23:09.404959+00:00'
+  id: urn:uuid:1409e156-bbf7-4ef1-89cc-76bd14bddd14
+  name: DANDI publish
+  schemaKey: PublishActivity
+  startDate: '2023-05-02T21:23:09.404959+00:00'
+  wasAssociatedWith:
+  - id: urn:uuid:10dce6dd-edb4-436f-80c0-3e36b67b9677
+    identifier: RRID:SCR_017571
+    name: DANDI API
+    schemaKey: Software
+    version: 0.1.0
 relatedResource: []
 repository: https://dandiarchive.org
 schemaKey: Dandiset
